tests/badindex.err
4: error: array index out of bounds: 5
	int b = a[5];
	         ^
