tests/badindex.juice
// array ref out of bounds

int[] a = new int[4];
int b = a[5];